--- a/Readme
+++ b/Readme
@@ -6,3 +6,4 @@ Sto usando "mono" per compilare applicazioni su raspberry.
 Uso http://www.antoniopelleriti.it/file.axd?file=2013%2F6%2FABC%23+guida+alla+programmazione+in+csharp.pdf
 come guida per studiare C#.
 
+Io sono un amico di Lisa Simposons
